--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "yarn eslint src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,17 @@
   },
   "homepage": "https://github.com/yscorecore/ys.knife.query.js#readme",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
-    "typescript": "^4.9.3"
-  }
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0"
+  },
+  "dependencies": {}
 }
