--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0"
