--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "git+https://github.com/yscorecore/ys.knife.query.js.git"
   },
   "keywords": [
-    "ys.knife.query",   "ys.knife.query.js"
+    "ys.knife.query",
+    "ys.knife.query.js"
   ],
   "author": "Pengbo",
   "license": "ISC",
@@ -35,6 +36,8 @@
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "rimraf": "^6.0.1",
+    "rollup": "^4.20.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0"
